<resources>
    <string name="app_name">MushiMushi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">MushiMushi</string>
    <string name="titleAppBarHome">MushiMushi</string>
    <string name="textNewPostBTHome">New Posts</string>
    <string name="description_postBT_home">Add post Button</string>
    <string name="title_searchBT_home">Search</string>
    <string name="description_searchBT_home">"Search Post Button "</string>
    <string name="title_signOut_home">Sign out</string>
    <string name="et_hint_comment">Wanna add something :)</string>
    <string name="title_saved_posts">Saved Posts</string>
    <string name="des_image">Image</string>
    <string name="txt_empty">Empty</string>
    <string name="txt_comments">Comments</string>
    <string name="hint_et_create_post">What do you want to talk about?</string>
    <string name="txt_post_btn">POST</string>
    <string name="hint_et_search_post">Search for someting :)</string>
    <string name="txt_search_post_btn">Search Posts</string>
    <string name="txt_notification">on your post</string>
    <string name="txt_title_notification">Notifications</string>
    <string name="txt_title_post_view">Post</string>
    <string name="post_card_transition">post_card_transition</string>
    <string name="title_logo_splash">Created by Saurabh Raj</string>
    <string name="des_logo_splash_screen">Logo for Splash Screen</string>
    <string name="des_btn_notification_panel">Button for Notification Panel</string>
    <string name="des_img_comment_post">User image for comment post view</string>
    <string name="des_btn">Button</string>
</resources>