<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:transitionName="@string/post_card_transition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        tools:context=".ui.comments.CommentSectActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_comment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="#f4f3f3"
            app:layout_constraintBottom_toTopOf="@+id/et_comment_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_comment" />

        <EditText
            android:id="@+id/et_comment_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/et_hint_comment"
            android:background="@drawable/edittext_curve_shape"
            android:ems="10"
            android:hint="@string/et_hint_comment"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#606470"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_post_comment"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/btn_post_comment"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_send"
            android:contentDescription="@string/des_image"
            app:layout_constraintBottom_toBottomOf="@+id/et_comment_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_comment_input" />

        <TextView
            android:id="@+id/txt_title_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/txt_comments"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/view_on_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/et_comment_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recyclerview_comment"
            app:layout_constraintTop_toTopOf="@+id/recyclerview_comment">

            <ImageView
                android:id="@+id/img_clear_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:contentDescription="@string/des_image"
                android:src="@drawable/ic_clear" />

            <TextView
                android:id="@+id/txt_on_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/txt_empty"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>