<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_title_post_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/txt_title_post_view"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/view_card_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_post_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title_post_view">

                <ImageView
                    android:id="@+id/img_user_post_view"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/des_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/txt_user_name_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/img_user_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_user_post_view"
                    tools:text="Saurabh Raj" />

                <TextView
                    android:id="@+id/txt_timeStamp_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#706c61"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/img_user_post_view"
                    app:layout_constraintTop_toBottomOf="@+id/txt_user_name_post_view"
                    tools:text="3 hrs ago" />

                <TextView
                    android:id="@+id/txt_body_post_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_user_post_view"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae venenatis mi. Nulla non ante vitae lorem sollicitudin vehicula. Sed magna felis, imperdiet non mattis sit amet, cursus ut eros. Suspendisse posuere finibus luctus. Vestibulum pellentesque, neque eu laoreet sollicitudin, tellus neque tempus velit, vel fermentum nulla arcu volutpat nulla. Nullam interdum, sem vitae porta vestibulum, est urna volutpat ligula, et dictum massa neque at nibh. Morbi rhoncus eu leo a consequat. Donec ac nibh ut nunc egestas placerat sed eu mauris. In id tortor ut mauris pulvinar imperdiet. Donec commodo dapibus ante, id vulputate quam commodo et. Vestibulum molestie ligula vitae euismod pretium. Aliquam sapien metus, consequat eget eleifend sed, consectetur et erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie dictum tortor sed suscipit. Suspendisse pretium malesuada nibh a ultricies." />

                <ImageView
                    android:id="@+id/img_like_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/des_image"
                    android:src="@drawable/ic_liked"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txt_body_post_view"
                    app:layout_constraintTop_toBottomOf="@+id/divider_mid_post_view" />

                <TextView
                    android:id="@+id/txt_like_count_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#706c61"
                    app:layout_constraintBottom_toBottomOf="@+id/img_like_post_view"
                    app:layout_constraintStart_toEndOf="@+id/img_like_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_like_post_view"
                    tools:text="2" />

                <ImageView
                    android:id="@+id/img_sad_post_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/des_image"
                    android:src="@drawable/ic_sad"
                    app:layout_constraintBottom_toBottomOf="@+id/img_like_post_view"
                    app:layout_constraintStart_toEndOf="@+id/txt_like_count_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_like_post_view" />

                <TextView
                    android:id="@+id/txt_sad_count_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#706c61"
                    app:layout_constraintBottom_toBottomOf="@+id/img_sad_post_view"
                    app:layout_constraintStart_toEndOf="@+id/img_sad_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_sad_post_view"
                    tools:text="2" />

                <ImageView
                    android:id="@+id/img_haha_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/des_image"
                    android:src="@drawable/ic_laughing"
                    app:layout_constraintBottom_toBottomOf="@+id/img_sad_post_view"
                    app:layout_constraintStart_toEndOf="@+id/txt_sad_count_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_sad_post_view" />

                <TextView
                    android:id="@+id/txt_haha_count_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#706c61"
                    app:layout_constraintBottom_toBottomOf="@+id/img_haha_post_view"
                    app:layout_constraintStart_toEndOf="@+id/img_haha_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_haha_post_view"
                    tools:text="13" />

                <ImageView
                    android:id="@+id/img_angry_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/des_image"
                    android:src="@drawable/ic_angry"
                    app:layout_constraintBottom_toBottomOf="@+id/img_haha_post_view"
                    app:layout_constraintStart_toEndOf="@+id/txt_haha_count_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_haha_post_view" />

                <TextView
                    android:id="@+id/txt_angry_count_post_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#706c61"
                    app:layout_constraintBottom_toBottomOf="@+id/img_angry_post_view"
                    app:layout_constraintStart_toEndOf="@+id/img_angry_post_view"
                    app:layout_constraintTop_toTopOf="@+id/img_angry_post_view"
                    tools:text="3" />

                <View
                    android:id="@+id/divider_mid_post_view"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="16dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#706c61"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_body_post_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_comment_post_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_add_comment_post_view"
            tools:itemCount="10"
            tools:listitem="@layout/item_comment" />

        <LinearLayout
            android:id="@+id/view_on_empty_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_comment_post_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recycler_comment_post_view"
            app:layout_constraintTop_toBottomOf="@+id/view_card_post">
            <ImageView
                android:id="@+id/cross_post_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:contentDescription="@string/des_image"
                android:src="@drawable/ic_clear" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/txt_empty"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_user_commment_post_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_card_post"
            tools:background="@tools:sample/avatars" />

        <EditText
            android:id="@+id/et_add_comment_post_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/et_hint_comment"
            android:background="@drawable/edittext_curve_shape"
            android:backgroundTint="#f4f3f3"
            android:ems="10"
            android:hint="@string/et_hint_comment"
            android:imeOptions="actionDone"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#606470"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_user_commment_post_view"
            app:layout_constraintEnd_toStartOf="@+id/btn_et_add_comment_post_view"
            app:layout_constraintStart_toEndOf="@+id/img_user_commment_post_view"
            app:layout_constraintTop_toTopOf="@+id/img_user_commment_post_view" />

        <ImageView
            android:id="@+id/btn_et_add_comment_post_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_add_comment_post_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_add_comment_post_view"
            app:srcCompat="@drawable/ic_send" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>